# python-snippets

./: .gitignore  .pre-commit-config.yaml  common_functions.py  conftest.py  pyproject.toml  xmlsort.ipynb
.github/: dependabot.yml
.github/workflows/: docs-build-deploy.yml  testing.yml
python_snippets/: __init__.py  domains.py  typing.py
python_snippets/scripts/: __init__.py
tests/: domainsort_test.py
