[tool.poetry]
authors = []
description = ""
license = "MIT OR Apache-2.0"
name = "python-snippets"
version = "0.1.0"
repository = "https://github.com/jonasbb/python-snippets"
readme = "README.md"

[tool.poetry.dependencies]
# Sync with CI
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pdoc = "^15.0.0"
pytest = "^8.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
