[project]
authors = []
description = ""
license = "MIT OR Apache-2.0"
name = "python-snippets"
readme = "README.md"
requires-python = ">=3.10"
urls = {source = "https://github.com/jonasbb/python-snippets"}
version = "0.1.0"

[project.scripts]
domainsort = "python_snippets.scripts:domainsort"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.9.0"
pdoc = "^15.0.0"
pytest = "^8.3.3"
pytest-markdown-docs = "^0.7.1"
pytest-md = "^0.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
